# shuck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  config.example.toml  deny.toml  husk-dev.yaml  husk.entitlements  install.sh  pyproject.toml  shuck-dev.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-images.yml  ci.yml  nightly-quality.yml  release.yml  update-deps.yml
contrib/: husk.service  shuck.service
contrib/crates-io-placeholder/: Cargo.toml  README.md
contrib/crates-io-placeholder/src/: main.rs
crates/husk/: Cargo.toml
crates/husk-agent/: Cargo.toml
crates/husk-agent-proto/: Cargo.toml
crates/husk-agent-proto/src/: lib.rs
crates/husk-agent-proto/tests/: integration.rs
crates/husk-agent/src/: lib.rs  main.rs  pty.rs
crates/husk-agent/tests/: handler.rs
crates/husk-api/: Cargo.toml
crates/husk-api/src/: lib.rs
crates/husk-api/tests/: api_integration.rs  openapi_contract.rs  perf_baseline.rs
crates/husk-core/: Cargo.toml
crates/husk-core/src/: agent_client.rs  lib.rs
crates/husk-core/tests/: agent_client.rs  agent_integration.rs  failure_injection.rs  orchestration_paths.rs  state_transitions.rs
crates/husk-net/: Cargo.toml
crates/husk-net/src/: lib.rs
crates/husk-net/tests/: e2e_bridge.rs
crates/husk-state/: Cargo.toml
crates/husk-state/src/: lib.rs
crates/husk-state/tests/: integration.rs
crates/husk-storage/: Cargo.toml
crates/husk-storage/src/: lib.rs
crates/husk-storage/tests/: integration.rs
crates/husk-vmm/: Cargo.toml
crates/husk-vmm/src/: apple_vz.rs  fd_stream.rs  firecracker.rs  lib.rs  vsock.rs
crates/husk-vmm/tests/: mock_firecracker.rs
crates/husk/src/: main.rs
crates/husk/tests/: e2e.rs
crates/shuck/: Cargo.toml
crates/shuck-agent/: Cargo.toml
crates/shuck-agent-proto/: Cargo.toml
crates/shuck-agent-proto/src/: lib.rs
crates/shuck-agent-proto/tests/: integration.rs
crates/shuck-agent/src/: lib.rs  main.rs  pty.rs
crates/shuck-agent/tests/: handler.rs
crates/shuck-api/: Cargo.toml
crates/shuck-api/src/: lib.rs
crates/shuck-api/tests/: api_integration.rs  openapi_contract.rs  perf_baseline.rs
crates/shuck-core/: Cargo.toml
crates/shuck-core/src/: agent_client.rs  lib.rs
crates/shuck-core/tests/: agent_client.rs  agent_integration.rs  failure_injection.rs  orchestration_paths.rs  state_transitions.rs
crates/shuck-net/: Cargo.toml
crates/shuck-net/src/: lib.rs
crates/shuck-net/tests/: e2e_bridge.rs
crates/shuck-state/: Cargo.toml
crates/shuck-state/src/: lib.rs
crates/shuck-state/tests/: integration.rs
crates/shuck-storage/: Cargo.toml
crates/shuck-storage/src/: lib.rs
crates/shuck-storage/tests/: integration.rs
crates/shuck-vmm/: Cargo.toml
crates/shuck-vmm/src/: apple_vz.rs  firecracker.rs  lib.rs  vsock.rs
crates/shuck-vmm/tests/: mock_firecracker.rs
crates/shuck/src/: firecracker.rs  images.rs  lib.rs  main.rs
crates/shuck/tests/: config_defaults.rs  e2e.rs  images.rs  run_fallback.rs
docs/: compatibility.md  debt-register.md  release-checklist.md  roadmap.md
docs/adr/: 0001-networking-backends.md  0002-api-authentication.md  0003-agent-protocol-framing.md
docs/api/: cli-output-json.md
docs/operations/: runbooks.md
docs/performance/: protocol-encoding-evaluation.md  slo.md
docs/quality-plan/: 01-functional-correctness.md  02-security-posture.md  03-reliability-operability.md  04-performance-efficiency.md  05-testing-maturity.md  06-maintainability-code-quality.md  07-api-ux-consistency.md  README.md
docs/security/: hardening-guide.md  regression-suite.md  threat-model.md
docs/testing/: quality-gates.md
guest/: build-initramfs.sh  build-k3s-kernel.sh  build-k3s-rootfs.sh  build-kernel-image.sh  build-rootfs.sh  check-k3s-kernel.sh  inittab  k3s-agent.sh  k3s-server.sh  test-initramfs.sh  test-k3s-cluster.sh  verify-boot.md
scripts/ci/: chaos_restart_drill.sh  graceful_shutdown_drill.sh
shuck_cli/: __init__.py  __main__.py
