[workspace]
members = [
    "crates/husk",
    "crates/husk-core",
    "crates/husk-vmm",
    "crates/husk-net",
    "crates/husk-storage",
    "crates/husk-agent",
    "crates/husk-agent-proto",
    "crates/husk-api",
    "crates/husk-state",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/rvben/husk"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web framework
axum = { version = "0.8", features = ["json"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Terminal
crossterm = "0.28"

# Hyper for Unix socket HTTP
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
tower = "0.5"

# Internal crates
husk-core = { path = "crates/husk-core" }
husk-vmm = { path = "crates/husk-vmm" }
husk-net = { path = "crates/husk-net" }
husk-storage = { path = "crates/husk-storage" }
husk-agent-proto = { path = "crates/husk-agent-proto" }
husk-api = { path = "crates/husk-api" }
husk-state = { path = "crates/husk-state" }

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev]
# Fast compile times for development
opt-level = 0

[profile.agent]
inherits = "release"
# Guest agent: optimize for size
opt-level = "s"
lto = true
strip = true
codegen-units = 1
