[workspace]
members = [
    "crates/shuck",
    "crates/shuck-core",
    "crates/shuck-vmm",
    "crates/shuck-net",
    "crates/shuck-storage",
    "crates/shuck-agent",
    "crates/shuck-agent-proto",
    "crates/shuck-api",
    "crates/shuck-state",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/rvben/shuck"
license = "MIT"
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
description = "An open-source microVM manager built on Firecracker"
keywords = ["microvm", "firecracker", "virtualization"]
categories = ["virtualization"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web framework
axum = { version = "0.8", features = ["json", "ws"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# Terminal
crossterm = "0.28"

# WebSocket
tokio-tungstenite = "0.28"
futures-util = "0.3"

# Hyper for Unix socket HTTP
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Internal crates
shuck-core = { path = "crates/shuck-core", default-features = false }
shuck-vmm = { path = "crates/shuck-vmm" }
shuck-net = { path = "crates/shuck-net" }
shuck-storage = { path = "crates/shuck-storage" }
shuck-agent-proto = { path = "crates/shuck-agent-proto" }
shuck-api = { path = "crates/shuck-api", default-features = false }
shuck-state = { path = "crates/shuck-state" }

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev]
# Fast compile times for development
opt-level = 0

[profile.agent]
inherits = "release"
# Guest agent: optimize for size
opt-level = "s"
lto = true
strip = true
codegen-units = 1
