[package]
name = "husk-agent-proto"
description = "Shared protocol types for husk host-guest communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
