[package]
name = "husk-agent"
description = "Guest agent binary for husk microVMs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "husk_agent"
path = "src/lib.rs"

[[bin]]
name = "husk-agent"
path = "src/main.rs"

[dependencies]
husk-agent-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.6"
libc = "0.2"
