[package]
name = "husk-api"
description = "REST API server for husk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
husk-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
