[package]
name = "husk-api"
description = "REST API server for husk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["linux-net"]
linux-net = ["husk-core/linux-net"]

[dependencies]
husk-core = { workspace = true }
husk-vmm = { workspace = true }
husk-agent-proto = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
husk-vmm = { workspace = true }
husk-state = { workspace = true }
husk-net = { workspace = true }
husk-storage = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
uuid = { workspace = true }
