[package]
name = "husk-core"
description = "Core orchestration for husk microVM lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["linux-net"]
linux-net = ["husk-net", "dep:tempfile"]

[dependencies]
husk-vmm = { workspace = true }
husk-net = { workspace = true, optional = true }
husk-storage = { workspace = true }
husk-state = { workspace = true }
husk-agent-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
husk-agent = { path = "../husk-agent" }
tempfile = "3"
