[package]
name = "husk-state"
description = "SQLite state persistence for husk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
