[package]
name = "husk-storage"
description = "Storage management for husk microVMs (rootfs, OCI images, volumes)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
