[package]
name = "husk-vmm"
description = "VMM abstraction layer with Firecracker and Cloud Hypervisor backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-virtualization = "0.3"
objc2-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
