[package]
name = "husk"
description = "An open source microVM manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "husk"
path = "src/main.rs"

[dependencies]
husk-api = { workspace = true }
husk-core = { workspace = true }
husk-vmm = { workspace = true }
husk-net = { workspace = true }
husk-storage = { workspace = true }
husk-state = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
