[package]
name = "shuck-agent-proto"
description = "Shared protocol types for shuck host-guest communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", default-features = false, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
proptest = "1"
