[package]
name = "shuck-agent"
description = "Guest agent binary for shuck microVMs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "shuck_agent"
path = "src/lib.rs"

[[bin]]
name = "shuck-agent"
path = "src/main.rs"

[dependencies]
shuck-agent-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.6"
