[package]
name = "shuck-api"
description = "REST API server for shuck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["linux-net"]
linux-net = ["shuck-core/linux-net"]

[dependencies]
shuck-core = { workspace = true, features = ["utoipa"] }
shuck-vmm = { workspace = true }
shuck-agent-proto = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
shuck-vmm = { workspace = true }
shuck-state = { workspace = true }
shuck-net = { workspace = true }
shuck-storage = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
