[package]
name = "shuck-core"
description = "Core orchestration for shuck microVM lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["linux-net"]
linux-net = ["shuck-net", "dep:tempfile"]
utoipa = ["dep:utoipa"]

[dependencies]
shuck-vmm = { workspace = true }
shuck-net = { workspace = true, optional = true }
shuck-storage = { workspace = true }
shuck-state = { workspace = true }
shuck-agent-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, optional = true }
tempfile = { version = "3", optional = true }
ring = "0.17"

[dev-dependencies]
shuck-agent = { path = "../shuck-agent" }
tempfile = "3"
