[package]
name = "shuck-net"
description = "Network management for shuck microVMs (TAP devices, IP allocation, nftables)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1"
