[package]
name = "shuck-storage"
description = "Storage management for shuck microVMs (rootfs, OCI images, volumes)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
reflink-copy = "0.1"

[dev-dependencies]
tempfile = "3"
