[package]
name = "shuck"
description = "An open source microVM manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "shuck"
path = "src/main.rs"

[lib]
name = "shuck"
path = "src/lib.rs"

[features]
default = ["linux-net"]
linux-net = ["shuck-core/linux-net", "shuck-api/linux-net", "shuck-net"]

[dependencies]
shuck-api = { workspace = true }
shuck-core = { workspace = true }
shuck-vmm = { workspace = true }
shuck-net = { workspace = true, optional = true }
shuck-storage = { workspace = true }
shuck-state = { workspace = true }
shuck-agent-proto = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
crossterm = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
